<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.cvdevelopers.restfull.view.DecoratedButton
                style="@style/FacebookSignInButton"
                android:id="@+id/login_facebook_button"
                android:layout_margin="@dimen/margin"
                android:text="@string/fb_login"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="O"
                android:layout_marginBottom="@dimen/margin"/>

            <include layout="@layout/divider_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    style="@style/EditText"
                    android:id="@+id/first_name_input"
                    android:layout_weight="1"
                    android:inputType="textCapWords"
                    android:hint="@string/first_name"
                    android:nextFocusDown="@+id/last_name_input"
                    android:maxLength="100"/>

                <include layout="@layout/divider_vertical"/>

                <EditText
                    style="@style/EditText"
                    android:id="@+id/last_name_input"
                    android:layout_weight="1"
                    android:inputType="textCapWords"
                    android:hint="@string/last_name"
                    android:maxLength="100"/>
            </LinearLayout>

            <include layout="@layout/divider_horizontal"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/email_input"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                />

            <include layout="@layout/divider_horizontal"/>

            <EditText
                style="@style/EditText"
                android:id="@+id/password_input"
                android:inputType="textPassword"
                android:hint="@string/password_hint"/>

            <include layout="@layout/divider_horizontal"/>

            <Button
                style="@style/TiltButton.HugePadding.FullWidth"
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up"
                android:enabled="false"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>
